unpackaged/main/default/objects/Evaluation_Value__c/Evaluation_Value__c.object-meta.xml
<CustomObject>
    <label>Evaluation Value</label>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Evaluation Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>