unpackaged/main/default/objects/Evaluation_Value__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation</label>
    <referenceTo>Evaluation__c</referenceTo>
    <relationshipLabel>Evaluation Values</relationshipLabel>
    <relationshipName>Evaluation_Values</relationshipName>
    <type>Lookup</type>
</CustomField>