unpackaged/main/default/objects/Evaluation_Value__c/fields/Evaluation_Not_Executed__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Not_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Not Executed</label>
    <type>Checkbox</type>
</CustomField>