unpackaged/main/default/objects/Evaluation_Value__c/fields/Logic_Result__c.field-meta.xml
<CustomField>
    <fullName>Logic_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logic Result</label>
    <type>Checkbox</type>
</CustomField>