unpackaged/main/default/objects/Evaluation_Value__c/fields/Show_In_Report__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Report</label>
    <type>Checkbox</type>
</CustomField>