unpackaged/main/default/objects/Evaluation_Value__c/fields/Test_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Id__c</fullName>
    <label>Test Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>